methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:4: error: not found: value vuBiscuit
  if (vuBiscuit==true){
      ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
 for(i<-1 to 6){
      ^